fix scrollbar with max-height and overflow

--- a/sass/_footing.scss
+++ b/sass/_footing.scss
@@ -1,5 +1,4 @@
 #addsection {
-  border: solid gray 1px;
   display: flex;
   align-items: center;
   justify-content: center;
