--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -13,6 +13,7 @@ body {
     box-sizing: border-box;
     background-color: $jet;
     color: $cultured;
+    margin: 0;
 }
 
 body * {
@@ -27,14 +28,18 @@ p {
 #outer {
     margin: 0;
     display: flex;
+    max-height: 100vh;
 }
 
 #main{
     width: 70vw;
     margin: 0;
+    max-height: 100vh;
 }
 
 #sidebar {
     border: 1px solid gray;
     width: 30vw;
+    overflow: auto;
+    max-height: 100vh;
 }
